--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,20 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
+    android:gravity="top"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <TextView
-            android:id="@+id/login_info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="8dp"
-            android:text="@string/login_info"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:paddingBottom="50dp"
+        android:paddingTop="40dp"
+        android:scaleType="center"
+        android:src="@drawable/logo" />
 
         <EditText
             android:id="@+id/login_username"
@@ -22,8 +25,12 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/login_username"
+            android:inputType="phone"
             android:maxLength="9"
-            android:inputType="phone" />
+             >
+
+            <requestFocus />
+        </EditText>
 
         <EditText
             android:id="@+id/login_password"
@@ -38,14 +45,18 @@
             android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:alpha=".8"
+            android:background="#00407a"
+            android:onClick="logMeIn"
             android:text="@string/login_button"
-            android:onClick="logMeIn" />
+            android:textColor="#ffffff"
+            android:textSize="@dimen/activity_horizontal_margin" />
 
         <ProgressBar
             android:id="@+id/login_progress"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:visibility="invisible" />
+
 </LinearLayout>
