--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:contentDescription="University Logo"
         android:paddingBottom="50dp"
         android:paddingTop="40dp"
         android:scaleType="center"
