--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+
+    
+            <item
+            android:id="@+id/button_logout"
+           	android:title="@string/button_logout"
+            
+                    android:orderInCategory="100"
+        android:showAsAction="never" />
 
 </menu>
