Deals, categories working..

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/deal_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
