--- a/res/layout/fragment_deals_view.xml
+++ b/res/layout/fragment_deals_view.xml
@@ -1,120 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#f5f5fc"
+    android:orientation="vertical" >
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="400dp"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:background="#f5f5fc" >
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:paddingBottom="5dp" >
 
-    <ImageButton
-        android:id="@+id/vote_up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="18dp"
-        android:background="#f5f5fc"
-        android:src="@drawable/vote_up" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/vote_score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/vote_down"
-        android:layout_toRightOf="@+id/vote_up"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="12dp"
-        android:text="@string/deals_rating"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="#269617"
-        android:textStyle="bold" />
+            <!-- vote and score -->
 
-    <ImageButton
-        android:id="@+id/vote_down"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/vote_up"
-        android:layout_toRightOf="@+id/vote_score"
-        android:background="#f5f5fc"
-        android:src="@drawable/vote_down" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="@string/deals_title"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#273e45"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/textView2sdcv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="7dp"
-        android:background="#273e45"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:text="@string/deals_info"
-        android:textColor="#c5c9b8"
-        android:textSize="15sp" />
+                    <ImageButton
+                        android:id="@+id/vote_up"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="left"
+                        android:layout_weight="1"
+                        android:background="#f5f5fc"
+                        android:gravity="left"
+                        android:src="@drawable/vote_up" />
 
-    <TextView
-        android:id="@+id/DealsDiscription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2sdcv"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="5dp"
-        android:text="@string/deals_description"
-        android:textColor="#273e45"
-        android:textSize="15sp" />
+                    <TextView
+                        android:id="@+id/vote_score"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="1245"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="#269617"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/vote_down"
-        android:paddingRight="20dp"
-        android:src="@drawable/icon_clothing" />
+                    <ImageButton
+                        android:id="@+id/vote_down"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:background="#f5f5fc"
+                        android:src="@drawable/vote_down" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/deal_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:src="@drawable/icon_other" />
+            </LinearLayout>
+            <!-- vote and score -->
+
+
+            <!-- title, creator, description -->
+            <TextView
+                android:id="@+id/deal_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:text="@string/deals_title"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#273e45"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/deal_creator_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:background="#273e45"
+                android:gravity="center"
+                android:text="@string/deals_info"
+                android:textColor="#fffce2"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/deal_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="left"
+                android:text="@string/deals_description"
+                android:textColor="#273e45"
+                android:textSize="15sp" />
+            <!-- title, creator, description -->
+        </LinearLayout>
+    </ScrollView>
+
+    <!-- buttons at the bottom -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" >
+        android:layout_gravity="bottom"
+        android:gravity="bottom"
+        android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/DealsGoToUrl"
+            android:id="@+id/deal_go_to_url"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_weight=".50"
             android:background="#122430"
             android:text="@string/deals_gotoUrl"
             android:textColor="#fffce2" />
 
         <Button
-            android:id="@+id/DealsReport"
+            android:id="@+id/deal_report"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:layout_weight=".50"
             android:background="#a40606"
             android:text="@string/deals_report"
             android:textColor="#fffce2" />
     </LinearLayout>
+    <!-- buttons at the bottom -->
 
-</RelativeLayout>
+</LinearLayout>
