--- a/res/layout/fragment_deals_categories.xml
+++ b/res/layout/fragment_deals_categories.xml
@@ -3,26 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
-    android:background="@drawable/deals_category_layout" >
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
-        android:background="#fff" >
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp" >
 
             <ImageButton
                 android:id="@+id/category_books"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_books" />
 
             <ImageButton
@@ -30,6 +29,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_clothing" />
 
             <ImageButton
@@ -37,18 +37,23 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_electronics" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:layout_marginTop="3dp" >
 
             <ImageButton
                 android:id="@+id/category_gaming"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_gaming" />
 
             <ImageButton
@@ -56,6 +61,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_groceries" />
 
             <ImageButton
@@ -63,18 +69,21 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_mobiles" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp" >
 
             <ImageButton
                 android:id="@+id/category_restaurants"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_restaurants" />
 
             <ImageButton
@@ -82,6 +91,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_travel" />
 
             <ImageButton
@@ -89,6 +99,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.25"
+                android:background="@android:drawable/btn_dialog"
                 android:src="@drawable/icon_other" />
         </LinearLayout>
     </LinearLayout>
