--- a/res/layout/fragment_smartcard.xml
+++ b/res/layout/fragment_smartcard.xml
@@ -1,84 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:rotation="270" >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.2"
+        >
 
-         <LinearLayout
-             xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="vertical"
->
+        <ImageView
+            android:id="@+id/deal_image"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:src="@drawable/logo" />
 
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_weight="0.2" >
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:paddingBottom="30dp"
+            android:paddingLeft="30dp"
+            android:paddingTop="20dp"
+            android:src="@drawable/student" />
+    </LinearLayout>
 
-                 <ImageView
-                     android:id="@+id/deal_image"
-                     android:layout_width="200dp"
-                     android:layout_height="match_parent"
-                     android:layout_margin="10dp"
-                     android:layout_weight="1"
-                     android:src="@drawable/logo" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.2" >
 
-                 <ImageView
-                     android:id="@+id/imageView11"
-                     android:layout_width="200dp"
-                     android:layout_height="match_parent"
-                     android:layout_gravity="right"
-                     android:layout_weight="1"
-                     android:paddingBottom="30dp"
-                     android:paddingLeft="30dp"
-                     android:paddingTop="20dp"
-                     android:src="@drawable/student" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="fill"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            android:src="@drawable/student_pic" />
 
-             </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
 
-             <LinearLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_weight="0.2" >
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:text="John Smith"
+                android:textSize="30sp" />
 
-                 <ImageView
-                     android:id="@+id/imageView2"
-                     android:layout_width="match_parent"
-                     android:layout_height="fill_parent"
-                     android:layout_gravity="fill"
-                     android:layout_margin="20dp"
-                     android:layout_weight="1"
-                     android:src="@drawable/student_pic" />
+            <TextView
+                android:id="@+id/deal_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:text="Student No: 125689524"
+                android:textSize="25sp" />
 
-                 <LinearLayout
-                     android:layout_width="match_parent"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1"
-                     android:orientation="vertical" >
-
-                     <TextView
-                         android:id="@+id/textView1"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="John Smith"
-                         android:textSize="30sp"
-                         android:fontFamily="sans-serif-light" />
-
-                     <TextView
-                         android:id="@+id/deal_title"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="Student No: 125689524"
-                         android:textSize="25sp"
-                         android:fontFamily="sans-serif-light" />
-
-                     <TextView
-                         android:id="@+id/textView3"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:text="Card Expiry: 30.09.16"
-                         android:textSize="25sp"
-                         android:fontFamily="sans-serif-light" />
-                 </LinearLayout>
-
-             </LinearLayout>
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-light"
+                android:text="Card Expiry: 30.09.16"
+                android:textSize="25sp" />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
