--- a/res/layout/fragment_smartcard.xml
+++ b/res/layout/fragment_smartcard.xml
@@ -1,80 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
+    android:background="@drawable/scardbg"
+    android:orientation="vertical" >
 
-    android:background="@drawable/scardbg" >
-
-    
-    <LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:rotation="270">
-    
-        
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.2"
-        >
+        android:layout_below="@+id/deal_title"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
+        android:text="Card Expiry: 30.09.16"
+        android:textSize="25sp" />
 
-        <ImageView
-            android:id="@+id/deal_image"
-            android:layout_width="192dp"
-            android:layout_height="236dp"
-            android:layout_margin="10dp"
-            
-            android:src="@drawable/logo" />
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/deal_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.2" >
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
+        android:text="Student No: 125689524"
+        android:textSize="25sp" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="130dp"
-            android:layout_height="284dp"
-            android:layout_gravity="fill"
-            android:layout_margin="20dp"
-            android:src="@drawable/student_pic" />
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/deal_title"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
+        android:text="John Smith"
+        android:textSize="30sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical" >
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="130dp"
+        android:layout_height="284dp"
+        android:layout_alignRight="@+id/deal_image"
+        android:layout_centerVertical="true"
+        android:layout_margin="20dp"
+        android:src="@drawable/student_pic" />
 
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:text="John Smith"
-                android:textSize="30sp" />
+    <ImageView
+        android:id="@+id/deal_image"
+        android:layout_width="192dp"
+        android:layout_height="236dp"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="false"
+        android:layout_margin="10dp"
+        android:src="@drawable/logo" />
 
-            <TextView
-                android:id="@+id/deal_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:text="Student No: 125689524"
-                android:textSize="25sp" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:text="Card Expiry: 30.09.16"
-                android:textSize="25sp" />
-
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
-</LinearLayout>
+</RelativeLayout>
